--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.0'
 	id 'io.spring.dependency-management' version '1.1.5'
-	id "org.openapi.generator" version "${openapiGeneratorVersion}"
 }
 
 group = 'com.lukasz'
@@ -32,11 +31,11 @@ dependencies {
 	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
 
 	// api
-	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocOpenApiVersion}"
-	implementation "org.openapitools:jackson-databind-nullable:${jacksonDatabindNullableVersion}"
-	implementation "javax.annotation:javax.annotation-api:${javaxAnnotationApiVersion}"
-	implementation "io.swagger:swagger-annotations:${swaggerAnnotationsVersion}"
-	implementation "com.google.code.findbugs:jsr305:${jsr305Version}"
+//	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocOpenApiVersion}"
+//	implementation "org.openapitools:jackson-databind-nullable:${jacksonDatabindNullableVersion}"
+//	implementation "javax.annotation:javax.annotation-api:${javaxAnnotationApiVersion}"
+//	implementation "io.swagger:swagger-annotations:${swaggerAnnotationsVersion}"
+//	implementation "com.google.code.findbugs:jsr305:${jsr305Version}"
 }
 
 tasks.named('test') {
